--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h1>¡Feliz Día de la Madre! 🌸 Gracias por ser siempre mi guía y mi apoyo. Tu amor y dedicación son el mayor regalo que he recibido. ¡Te quiero mucho! 💖</h1>
         </section>
 
-        <h4 style="position:relative; left: 35%; top: 10%;">Pulsa en las flores</h4>
+        <h4 style="position:relative; left: 35%; top: 10%;">Pulsa en la foto</h4>
     </main>
 </body>
 
